--- a/main.css
+++ b/main.css
@@ -406,7 +406,7 @@ css za search bar ispod
 
 #search-input {
     height: 100%;
-    width: 100%;
+    width: 200%;
     background-color: transparent;
     border: none;
     outline: none;
@@ -484,3 +484,7 @@ p{
     font-family: 'Work Sans', sans-serif;
 }
 
+.card{
+    height: 40%;
+    width: 40%;
+}
